Closed
Bug 225266
Opened 22 years ago
Closed 22 years ago
horizontal lines left of page after popup menu on about:about (border-collapse painting snafu)
Categories
(Core :: Layout: Tables, defect)
Core
Layout: Tables
Tracking
()
VERIFIED
FIXED
People
(Reporter: ldrhcp, Assigned: bernd_mozilla)
References
(
URL
)
Details
Attachments
(2 files)
|
455 bytes,
text/html
|
Details | |
|
620 bytes,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6a) Gecko/20031030
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6a) Gecko/20031030
When viewing the right-click menu lines extending from the TR borders are left
on the page. They lines are positioned as if the CSS included
TABLE { width: 100%; }
Reproducible: Always
Steps to Reproduce:
1. go to about:about
2. right-click on the portion of the page to the right of the table
3. click in a different portion of the page and lines should be left where the
menu was
Actual Results:
lines were left where the menu was
Expected Results:
left the page as it had been prior to the menu's presence
Comment 1•22 years ago
|
||
It'd be good to find out the minimal CSS and HTML that produces this (I suspect
the border-collapse plus margin on the table).
Assignee: misc → table
Component: Layout: Misc Code → Layout: Tables
Keywords: qawanted
OS: Windows 2000 → All
Hardware: PC → All
Summary: horizontal lines left of page after popup menu on about:about → horizontal lines left of page after popup menu on about:about (border-collapse painting snafu)
Comment 3•22 years ago
|
||
I'm seeing this using the test case with:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.6b) Gecko/20031216
Firebird/0.7+
(I see nothing with about:about)
Comment 4•22 years ago
|
||
I can confirm this on the latest Firebird build tested on winXP
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 5•22 years ago
|
||
Both the testcase and about:about work as explained for me.
Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6b) Gecko/20031208 (AKA 1.6b)
Comment 6•22 years ago
|
||
I tested this bug with both Mozilla nightly build of 2003-12-19, and Firebird
0.7, both running on W2k. In Mozilla [Mozilla/5.0 (Windows; U; Windows NT 5.0;
en-US; rv:1.7a) Gecko/20031219] the bugs occurs, in Firebird [Mozilla/5.0
(Windows; U; Windows NT 5.0; en-US; rv:1.5) Gecko/20031007 Firebird/0.7] it does
not.
this bug is a regression from the overflow checkin. Now that the leaking out
borders are reported as overflow the table paint code sees larger damage areas
that may not not be covered by the bc border. There is already a protectio for
this in the y- direction and this patch adds it for the x-direction. It might
be good for 1.6
Attachment #137783 -
Flags: superreview?(dbaron)
Attachment #137783 -
Flags: review?(dbaron)
Comment on attachment 137783 [details] [diff] [review]
patch
I'm not quite sure I follow, but r+sr=dbaron.
Attachment #137783 -
Flags: superreview?(dbaron)
Attachment #137783 -
Flags: superreview+
Attachment #137783 -
Flags: review?(dbaron)
Attachment #137783 -
Flags: review+
fix checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
*** Bug 230777 has been marked as a duplicate of this bug. ***
Comment 11•22 years ago
|
||
This was working just fine on a trunk build a few days ago, but now I am seeing
this behaviour again on a nightly Firebird trunk build:
(Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.6) Gecko/20040118 Firebird/0.7+)
I don't have the priviledges to reopen the bug though.
Comment 12•22 years ago
|
||
Still seing this
Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6) Gecko/20040113
Reopening as per comment #11 and my own observations.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 13•22 years ago
|
||
this hasnt been checked in any branch neither 1.6 or any fb branch use a trunk
build before reopening.
trunk builds show 1.7a+ in the build identifier
Status: REOPENED → RESOLVED
Closed: 22 years ago → 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•