dont paint border collapse borders if the damage area is not covered by the borders, bug 225266 r/sr=dbaron